@@ -73,6 +73,8 @@ usage()
 	printf("  unsafe	test option that pretends that dnssec fails\n");
 	printf("  status	shows the latest probe results\n");
 	printf("  reprobe	probe again\n");
+	printf("  hotspot_signon	force status into insecure\n");
+	printf("		do a reprobe command after signon\n");
 	printf("  results	continuous feed of probe results\n");
 	printf("  cmdtray	command channel for gui panel\n");
 	printf("  stoppanels	connected panels quit (for installers)\n");
